src/other/step/src/express/y.output
   0  $accept : express_file $end

   1  action_body : action_body_item_rep statement_rep

   2  action_body_item : declaration
   3                   | constant_decl
   4                   | local_decl

   5  action_body_item_rep :
   6                       | action_body_item action_body_item_rep

   7  actual_parameters : TOK_LEFT_PAREN expression_list TOK_RIGHT_PAREN
   8                    | TOK_LEFT_PAREN TOK_RIGHT_PAREN

   9  aggregate_initializer : TOK_LEFT_BRACKET TOK_RIGHT_BRACKET
  10                        | TOK_LEFT_BRACKET aggregate_init_body TOK_RIGHT_BRACKET

  11  aggregate_init_element : expression

  12  aggregate_init_body : aggregate_init_element
  13                      | aggregate_init_element TOK_COLON expression
  14                      | aggregate_init_body TOK_COMMA aggregate_init_element
  15                      | aggregate_init_body TOK_COMMA aggregate_init_element TOK_COLON expression

  16  aggregate_type : TOK_AGGREGATE TOK_OF parameter_type
  17                 | TOK_AGGREGATE TOK_COLON TOK_IDENTIFIER TOK_OF parameter_type

  18  aggregation_type : array_type
  19                   | bag_type
  20                   | list_type
  21                   | set_type

  22  $$1 :

  23  alias_statement : TOK_ALIAS TOK_IDENTIFIER TOK_FOR general_ref semicolon $$1 statement_rep TOK_END_ALIAS semicolon

  24  array_type : TOK_ARRAY index_spec TOK_OF optional_or_unique attribute_type

  25  assignable : assignable qualifier
  26             | identifier

  27  assignment_statement : assignable TOK_ASSIGNMENT expression semicolon

  28  attribute_type : aggregation_type
  29                 | basic_type
  30                 | defined_type

  31  explicit_attr_list :
  32                     | explicit_attr_list explicit_attribute

  33  bag_type : TOK_BAG limit_spec TOK_OF attribute_type
  34           | TOK_BAG TOK_OF attribute_type

  35  basic_type : TOK_BOOLEAN
  36             | TOK_INTEGER precision_spec
  37             | TOK_REAL precision_spec
  38             | TOK_NUMBER
  39             | TOK_LOGICAL
  40             | TOK_BINARY precision_spec optional_fixed
  41             | TOK_STRING precision_spec optional_fixed

  42  block_list :
  43             | block_list block_member

  44  block_member : declaration
  45               | include_directive
  46               | rule_decl

  47  by_expression :
  48                | TOK_BY expression

  49  cardinality_op : TOK_LEFT_CURL expression TOK_COLON expression TOK_RIGHT_CURL

  50  case_action : case_labels TOK_COLON statement

  51  case_action_list :
  52                   | case_action_list case_action

  53  case_block : case_action_list case_otherwise

  54  case_labels : expression
  55              | case_labels TOK_COMMA expression

  56  case_otherwise :
  57                 | TOK_OTHERWISE TOK_COLON statement

  58  case_statement : TOK_CASE expression TOK_OF case_block TOK_END_CASE semicolon

  59  compound_statement : TOK_BEGIN statement_rep TOK_END semicolon

  60  constant : TOK_PI
  61           | TOK_E

  62  constant_body : identifier TOK_COLON attribute_type TOK_ASSIGNMENT expression semicolon

  63  constant_body_list :
  64                     | constant_body constant_body_list

  65  constant_decl : TOK_CONSTANT constant_body_list TOK_END_CONSTANT semicolon

  66  declaration : entity_decl
  67              | function_decl
  68              | procedure_decl
  69              | type_decl

  70  derive_decl :
  71              | TOK_DERIVE derived_attribute_rep

  72  derived_attribute : attribute_decl TOK_COLON attribute_type initializer semicolon

  73  derived_attribute_rep : derived_attribute
  74                        | derived_attribute_rep derived_attribute

  75  entity_body : explicit_attr_list derive_decl inverse_clause unique_clause where_rule_OPT

  76  entity_decl : entity_header subsuper_decl semicolon entity_body TOK_END_ENTITY semicolon

  77  entity_header : TOK_ENTITY TOK_IDENTIFIER

  78  enumeration_type : TOK_ENUMERATION TOK_OF nested_id_list

  79  escape_statement : TOK_ESCAPE semicolon

  80  attribute_decl : TOK_IDENTIFIER
  81                 | TOK_SELF TOK_BACKSLASH TOK_IDENTIFIER TOK_DOT TOK_IDENTIFIER

  82  attribute_decl_list : attribute_decl
  83                      | attribute_decl_list TOK_COMMA attribute_decl

  84  optional :
  85           | TOK_OPTIONAL

  86  explicit_attribute : attribute_decl_list TOK_COLON optional attribute_type semicolon

  87  $$2 :

  88  express_file : $$2 schema_decl_list

  89  schema_decl_list : schema_decl
  90                   | schema_decl_list schema_decl

  91  expression : simple_expression
  92             | expression TOK_AND expression
  93             | expression TOK_OR expression
  94             | expression TOK_XOR expression
  95             | expression TOK_LESS_THAN expression
  96             | expression TOK_GREATER_THAN expression
  97             | expression TOK_EQUAL expression
  98             | expression TOK_LESS_EQUAL expression
  99             | expression TOK_GREATER_EQUAL expression
 100             | expression TOK_NOT_EQUAL expression
 101             | expression TOK_INST_EQUAL expression
 102             | expression TOK_INST_NOT_EQUAL expression
 103             | expression TOK_IN expression
 104             | expression TOK_LIKE expression
 105             | simple_expression cardinality_op simple_expression

 106  simple_expression : unary_expression
 107                    | simple_expression TOK_CONCAT_OP simple_expression
 108                    | simple_expression TOK_EXP simple_expression
 109                    | simple_expression TOK_TIMES simple_expression
 110                    | simple_expression TOK_DIV simple_expression
 111                    | simple_expression TOK_REAL_DIV simple_expression
 112                    | simple_expression TOK_MOD simple_expression
 113                    | simple_expression TOK_PLUS simple_expression
 114                    | simple_expression TOK_MINUS simple_expression

 115  expression_list : expression
 116                  | expression_list TOK_COMMA expression

 117  var :
 118      | TOK_VAR

 119  formal_parameter : var id_list TOK_COLON parameter_type

 120  formal_parameter_list :
 121                        | TOK_LEFT_PAREN formal_parameter_rep TOK_RIGHT_PAREN

 122  formal_parameter_rep : formal_parameter
 123                       | formal_parameter_rep semicolon formal_parameter

 124  parameter_type : basic_type
 125                 | conformant_aggregation
 126                 | defined_type
 127                 | generic_type

 128  function_call : function_id actual_parameters

 129  function_decl : function_header action_body TOK_END_FUNCTION semicolon

 130  $$3 :

 131  $$4 :

 132  $$5 :

 133  function_header : TOK_FUNCTION $$3 TOK_IDENTIFIER $$4 formal_parameter_list $$5 TOK_COLON parameter_type semicolon

 134  function_id : TOK_IDENTIFIER
 135              | TOK_BUILTIN_FUNCTION

 136  conformant_aggregation : aggregate_type
 137                         | TOK_ARRAY TOK_OF optional_or_unique parameter_type
 138                         | TOK_ARRAY index_spec TOK_OF optional_or_unique parameter_type
 139                         | TOK_BAG TOK_OF parameter_type
 140                         | TOK_BAG index_spec TOK_OF parameter_type
 141                         | TOK_LIST TOK_OF unique parameter_type
 142                         | TOK_LIST index_spec TOK_OF unique parameter_type
 143                         | TOK_SET TOK_OF parameter_type
 144                         | TOK_SET index_spec TOK_OF parameter_type

 145  generic_type : TOK_GENERIC
 146               | TOK_GENERIC TOK_COLON TOK_IDENTIFIER

 147  id_list : TOK_IDENTIFIER
 148          | id_list TOK_COMMA TOK_IDENTIFIER

 149  identifier : TOK_SELF
 150             | TOK_QUESTION_MARK
 151             | TOK_IDENTIFIER

 152  if_statement : TOK_IF expression TOK_THEN statement_rep TOK_END_IF semicolon
 153               | TOK_IF expression TOK_THEN statement_rep TOK_ELSE statement_rep TOK_END_IF semicolon

 154  include_directive : TOK_INCLUDE TOK_STRING_LITERAL semicolon

 155  increment_control : TOK_IDENTIFIER TOK_ASSIGNMENT expression TOK_TO expression by_expression

 156  index_spec : TOK_LEFT_BRACKET expression TOK_COLON expression TOK_RIGHT_BRACKET

 157  initializer : TOK_ASSIGNMENT expression

 158  rename : TOK_IDENTIFIER
 159         | TOK_IDENTIFIER TOK_AS TOK_IDENTIFIER

 160  rename_list : rename
 161              | rename_list TOK_COMMA rename

 162  parened_rename_list : TOK_LEFT_PAREN rename_list TOK_RIGHT_PAREN

 163  reference_clause : TOK_REFERENCE TOK_FROM TOK_IDENTIFIER semicolon

 164  $$6 :

 165  reference_clause : TOK_REFERENCE TOK_FROM TOK_IDENTIFIER $$6 parened_rename_list semicolon

 166  use_clause : TOK_USE TOK_FROM TOK_IDENTIFIER semicolon

 167  $$7 :

 168  use_clause : TOK_USE TOK_FROM TOK_IDENTIFIER $$7 parened_rename_list semicolon

 169  interface_specification : use_clause
 170                          | reference_clause

 171  interface_specification_list :
 172                               | interface_specification_list interface_specification

 173  interval : TOK_LEFT_CURL simple_expression rel_op simple_expression rel_op simple_expression right_curl

 174  set_or_bag_of_entity : defined_type
 175                       | TOK_SET TOK_OF defined_type
 176                       | TOK_SET limit_spec TOK_OF defined_type
 177                       | TOK_BAG limit_spec TOK_OF defined_type
 178                       | TOK_BAG TOK_OF defined_type

 179  inverse_attr_list : inverse_attr
 180                    | inverse_attr_list inverse_attr

 181  inverse_attr : TOK_IDENTIFIER TOK_COLON set_or_bag_of_entity TOK_FOR TOK_IDENTIFIER semicolon

 182  inverse_clause :
 183                 | TOK_INVERSE inverse_attr_list

 184  limit_spec : TOK_LEFT_BRACKET expression TOK_COLON expression TOK_RIGHT_BRACKET

 185  list_type : TOK_LIST limit_spec TOK_OF unique attribute_type
 186            | TOK_LIST TOK_OF unique attribute_type

 187  literal : TOK_INTEGER_LITERAL
 188          | TOK_REAL_LITERAL
 189          | TOK_STRING_LITERAL
 190          | TOK_STRING_LITERAL_ENCODED
 191          | TOK_LOGICAL_LITERAL
 192          | TOK_BINARY_LITERAL
 193          | constant

 194  local_initializer : TOK_ASSIGNMENT expression

 195  local_variable : id_list TOK_COLON parameter_type semicolon
 196                 | id_list TOK_COLON parameter_type local_initializer semicolon

 197  local_body :
 198             | local_variable local_body

 199  local_decl : TOK_LOCAL local_body TOK_END_LOCAL semicolon

 200  defined_type : TOK_IDENTIFIER

 201  defined_type_list : defined_type
 202                    | defined_type_list TOK_COMMA defined_type

 203  nested_id_list : TOK_LEFT_PAREN id_list TOK_RIGHT_PAREN

 204  oneof_op : TOK_ONEOF

 205  optional_or_unique :
 206                     | TOK_OPTIONAL
 207                     | TOK_UNIQUE
 208                     | TOK_OPTIONAL TOK_UNIQUE
 209                     | TOK_UNIQUE TOK_OPTIONAL

 210  optional_fixed :
 211                 | TOK_FIXED

 212  precision_spec :
 213                 | TOK_LEFT_PAREN expression TOK_RIGHT_PAREN

 214  proc_call_statement : procedure_id actual_parameters semicolon
 215                      | procedure_id semicolon

 216  procedure_decl : procedure_header action_body TOK_END_PROCEDURE semicolon

 217  $$8 :

 218  $$9 :

 219  procedure_header : TOK_PROCEDURE $$8 TOK_IDENTIFIER $$9 formal_parameter_list semicolon

 220  procedure_id : TOK_IDENTIFIER
 221               | TOK_BUILTIN_PROCEDURE

 222  group_ref : TOK_BACKSLASH TOK_IDENTIFIER

 223  qualifier : TOK_DOT TOK_IDENTIFIER
 224            | TOK_BACKSLASH TOK_IDENTIFIER
 225            | TOK_LEFT_BRACKET simple_expression TOK_RIGHT_BRACKET
 226            | TOK_LEFT_BRACKET simple_expression TOK_COLON simple_expression TOK_RIGHT_BRACKET

 227  $$10 :

 228  query_expression : TOK_QUERY TOK_LEFT_PAREN TOK_IDENTIFIER TOK_ALL_IN expression TOK_SUCH_THAT $$10 expression TOK_RIGHT_PAREN

 229  rel_op : TOK_LESS_THAN
 230         | TOK_GREATER_THAN
 231         | TOK_EQUAL
 232         | TOK_LESS_EQUAL
 233         | TOK_GREATER_EQUAL
 234         | TOK_NOT_EQUAL
 235         | TOK_INST_EQUAL
 236         | TOK_INST_NOT_EQUAL

 237  repeat_statement : TOK_REPEAT increment_control while_control until_control semicolon statement_rep TOK_END_REPEAT semicolon
 238                   | TOK_REPEAT while_control until_control semicolon statement_rep TOK_END_REPEAT semicolon

 239  return_statement : TOK_RETURN semicolon
 240                   | TOK_RETURN TOK_LEFT_PAREN expression TOK_RIGHT_PAREN semicolon

 241  right_curl : TOK_RIGHT_CURL

 242  rule_decl : rule_header action_body where_rule TOK_END_RULE semicolon

 243  rule_formal_parameter : TOK_IDENTIFIER

 244  rule_formal_parameter_list : rule_formal_parameter
 245                             | rule_formal_parameter_list TOK_COMMA rule_formal_parameter

 246  $$11 :

 247  $$12 :

 248  rule_header : TOK_RULE $$11 TOK_IDENTIFIER TOK_FOR TOK_LEFT_PAREN $$12 rule_formal_parameter_list TOK_RIGHT_PAREN semicolon

 249  schema_body : interface_specification_list block_list
 250              | interface_specification_list constant_decl block_list

 251  schema_decl : schema_header schema_body TOK_END_SCHEMA semicolon
 252              | include_directive

 253  schema_header : TOK_SCHEMA TOK_IDENTIFIER semicolon

 254  select_type : TOK_SELECT TOK_LEFT_PAREN defined_type_list TOK_RIGHT_PAREN

 255  semicolon : TOK_SEMICOLON

 256  set_type : TOK_SET limit_spec TOK_OF attribute_type
 257           | TOK_SET TOK_OF attribute_type

 258  skip_statement : TOK_SKIP semicolon

 259  statement : alias_statement
 260            | assignment_statement
 261            | case_statement
 262            | compound_statement
 263            | escape_statement
 264            | if_statement
 265            | proc_call_statement
 266            | repeat_statement
 267            | return_statement
 268            | skip_statement

 269  statement_rep :
 270                | semicolon statement_rep
 271                | statement statement_rep

 272  subsuper_decl :
 273                | supertype_decl
 274                | subtype_decl
 275                | supertype_decl subtype_decl

 276  subtype_decl : TOK_SUBTYPE TOK_OF TOK_LEFT_PAREN defined_type_list TOK_RIGHT_PAREN

 277  supertype_decl : TOK_ABSTRACT TOK_SUPERTYPE
 278                 | TOK_SUPERTYPE TOK_OF TOK_LEFT_PAREN supertype_expression TOK_RIGHT_PAREN
 279                 | TOK_ABSTRACT TOK_SUPERTYPE TOK_OF TOK_LEFT_PAREN supertype_expression TOK_RIGHT_PAREN

 280  supertype_expression : supertype_factor
 281                       | supertype_expression TOK_AND supertype_factor
 282                       | supertype_expression TOK_ANDOR supertype_factor

 283  supertype_expression_list : supertype_expression
 284                            | supertype_expression_list TOK_COMMA supertype_expression

 285  supertype_factor : identifier
 286                   | oneof_op TOK_LEFT_PAREN supertype_expression_list TOK_RIGHT_PAREN
 287                   | TOK_LEFT_PAREN supertype_expression TOK_RIGHT_PAREN

 288  type : aggregation_type
 289       | basic_type
 290       | defined_type
 291       | select_type

 292  type_item_body : enumeration_type
 293                 | type

 294  $$13 :

 295  $$14 :

 296  type_item : TOK_IDENTIFIER TOK_EQUAL $$13 type_item_body $$14 semicolon

 297  $$15 :

 298  type_decl : TOK_TYPE type_item where_rule_OPT $$15 TOK_END_TYPE semicolon

 299  general_ref : assignable group_ref
 300              | assignable

 301  unary_expression : aggregate_initializer
 302                   | unary_expression qualifier
 303                   | literal
 304                   | function_call
 305                   | identifier
 306                   | TOK_LEFT_PAREN expression TOK_RIGHT_PAREN
 307                   | interval
 308                   | query_expression
 309                   | TOK_NOT unary_expression
 310                   | TOK_PLUS unary_expression
 311                   | TOK_MINUS unary_expression

 312  unique :
 313         | TOK_UNIQUE

 314  qualified_attr : TOK_IDENTIFIER
 315                 | TOK_SELF TOK_BACKSLASH TOK_IDENTIFIER TOK_DOT TOK_IDENTIFIER

 316  qualified_attr_list : qualified_attr
 317                      | qualified_attr_list TOK_COMMA qualified_attr

 318  labelled_attrib_list : qualified_attr_list semicolon
 319                       | TOK_IDENTIFIER TOK_COLON qualified_attr_list semicolon

 320  labelled_attrib_list_list : labelled_attrib_list
 321                            | labelled_attrib_list_list labelled_attrib_list

 322  unique_clause :
 323                | TOK_UNIQUE labelled_attrib_list_list

 324  until_control :
 325                | TOK_UNTIL expression

 326  where_clause : expression semicolon
 327               | TOK_IDENTIFIER TOK_COLON expression semicolon

 328  where_clause_list : where_clause
 329                    | where_clause_list where_clause

 330  where_rule : TOK_WHERE where_clause_list

 331  where_rule_OPT :
 332                 | where_rule

 333  while_control :
 334                | TOK_WHILE expression

state 0
	$accept : . express_file $end  (0)
	$$2 : .  (87)

	.  reduce 87

	express_file  goto 1
	$$2  goto 2


state 1
	$accept : express_file . $end  (0)

	$end  accept


state 2
	express_file : $$2 . schema_decl_list  (88)

	TOK_INCLUDE  shift 3
	TOK_SCHEMA  shift 4
	.  error

	include_directive  goto 5
	schema_decl_list  goto 6
	schema_decl  goto 7
	schema_header  goto 8


state 3
	include_directive : TOK_INCLUDE . TOK_STRING_LITERAL semicolon  (154)

	TOK_STRING_LITERAL  shift 9
	.  error


state 4
	schema_header : TOK_SCHEMA . TOK_IDENTIFIER semicolon  (253)

	TOK_IDENTIFIER  shift 10
	.  error


state 5
	schema_decl : include_directive .  (252)

	.  reduce 252


state 6
	express_file : $$2 schema_decl_list .  (88)
	schema_decl_list : schema_decl_list . schema_decl  (90)

	TOK_INCLUDE  shift 3
	TOK_SCHEMA  shift 4
	$end  reduce 88

	include_directive  goto 5
	schema_decl  goto 11
	schema_header  goto 8


state 7
	schema_decl_list : schema_decl .  (89)

	.  reduce 89


state 8
	schema_decl : schema_header . schema_body TOK_END_SCHEMA semicolon  (251)
	interface_specification_list : .  (171)

	.  reduce 171

	interface_specification_list  goto 12
	schema_body  goto 13


state 9
	include_directive : TOK_INCLUDE TOK_STRING_LITERAL . semicolon  (154)

	TOK_SEMICOLON  shift 14
	.  error

	semicolon  goto 15


state 10
	schema_header : TOK_SCHEMA TOK_IDENTIFIER . semicolon  (253)

	TOK_SEMICOLON  shift 14
	.  error

	semicolon  goto 16


state 11
	schema_decl_list : schema_decl_list schema_decl .  (90)

	.  reduce 90


state 12
	interface_specification_list : interface_specification_list . interface_specification  (172)
	schema_body : interface_specification_list . block_list  (249)
	schema_body : interface_specification_list . constant_decl block_list  (250)
	block_list : .  (42)

	TOK_CONSTANT  shift 17
	TOK_REFERENCE  shift 18
	TOK_USE  shift 19
	TOK_END_SCHEMA  reduce 42
	TOK_ENTITY  reduce 42
	TOK_FUNCTION  reduce 42
	TOK_INCLUDE  reduce 42
	TOK_PROCEDURE  reduce 42
	TOK_RULE  reduce 42
	TOK_TYPE  reduce 42

	constant_decl  goto 20
	block_list  goto 21
	reference_clause  goto 22
	use_clause  goto 23
	interface_specification  goto 24


state 13
	schema_decl : schema_header schema_body . TOK_END_SCHEMA semicolon  (251)

	TOK_END_SCHEMA  shift 25
	.  error


state 14
	semicolon : TOK_SEMICOLON .  (255)

	.  reduce 255


state 15
	include_directive : TOK_INCLUDE TOK_STRING_LITERAL semicolon .  (154)

	.  reduce 154


state 16
	schema_header : TOK_SCHEMA TOK_IDENTIFIER semicolon .  (253)

	.  reduce 253


state 17
	constant_decl : TOK_CONSTANT . constant_body_list TOK_END_CONSTANT semicolon  (65)
	constant_body_list : .  (63)

	TOK_QUESTION_MARK  shift 26
	TOK_IDENTIFIER  shift 27
	TOK_SELF  shift 28
	TOK_END_CONSTANT  reduce 63

	identifier  goto 29
	constant_body  goto 30
	constant_body_list  goto 31


state 18
	reference_clause : TOK_REFERENCE . TOK_FROM TOK_IDENTIFIER semicolon  (163)
	reference_clause : TOK_REFERENCE . TOK_FROM TOK_IDENTIFIER $$6 parened_rename_list semicolon  (165)

	TOK_FROM  shift 32
	.  error


state 19
	use_clause : TOK_USE . TOK_FROM TOK_IDENTIFIER semicolon  (166)
	use_clause : TOK_USE . TOK_FROM TOK_IDENTIFIER $$7 parened_rename_list semicolon  (168)

	TOK_FROM  shift 33
	.  error


state 20
	schema_body : interface_specification_list constant_decl . block_list  (250)
	block_list : .  (42)

	.  reduce 42

	block_list  goto 34


state 21
	block_list : block_list . block_member  (43)
	schema_body : interface_specification_list block_list .  (249)

	TOK_ENTITY  shift 35
	TOK_FUNCTION  shift 36
	TOK_INCLUDE  shift 3
	TOK_PROCEDURE  shift 37
	TOK_RULE  shift 38
	TOK_TYPE  shift 39
	TOK_END_SCHEMA  reduce 249

	function_header  goto 40
	rule_header  goto 41
	procedure_header  goto 42
	declaration  goto 43
	block_member  goto 44
	include_directive  goto 45
	rule_decl  goto 46
	entity_decl  goto 47
	function_decl  goto 48
	procedure_decl  goto 49
	type_decl  goto 50
	entity_header  goto 51


state 22
	interface_specification : reference_clause .  (170)

	.  reduce 170


state 23
	interface_specification : use_clause .  (169)

	.  reduce 169


state 24
	interface_specification_list : interface_specification_list interface_specification .  (172)

	.  reduce 172


state 25
	schema_decl : schema_header schema_body TOK_END_SCHEMA . semicolon  (251)

	TOK_SEMICOLON  shift 14
	.  error

	semicolon  goto 52


state 26
	identifier : TOK_QUESTION_MARK .  (150)

	.  reduce 150


state 27
	identifier : TOK_IDENTIFIER .  (151)

	.  reduce 151


state 28
	identifier : TOK_SELF .  (149)

	.  reduce 149


state 29
	constant_body : identifier . TOK_COLON attribute_type TOK_ASSIGNMENT expression semicolon  (62)

	TOK_COLON  shift 53
	.  error


state 30
	constant_body_list : constant_body . constant_body_list  (64)
	constant_body_list : .  (63)

	TOK_QUESTION_MARK  shift 26
	TOK_IDENTIFIER  shift 27
	TOK_SELF  shift 28
	TOK_END_CONSTANT  reduce 63

	identifier  goto 29
	constant_body  goto 30
	constant_body_list  goto 54


state 31
	constant_decl : TOK_CONSTANT constant_body_list . TOK_END_CONSTANT semicolon  (65)

	TOK_END_CONSTANT  shift 55
	.  error


state 32
	reference_clause : TOK_REFERENCE TOK_FROM . TOK_IDENTIFIER semicolon  (163)
	reference_clause : TOK_REFERENCE TOK_FROM . TOK_IDENTIFIER $$6 parened_rename_list semicolon  (165)

	TOK_IDENTIFIER  shift 56
	.  error


state 33
	use_clause : TOK_USE TOK_FROM . TOK_IDENTIFIER semicolon  (166)
	use_clause : TOK_USE TOK_FROM . TOK_IDENTIFIER $$7 parened_rename_list semicolon  (168)

	TOK_IDENTIFIER  shift 57
	.  error


state 34
	block_list : block_list . block_member  (43)
	schema_body : interface_specification_list constant_decl block_list .  (250)

	TOK_ENTITY  shift 35
	TOK_FUNCTION  shift 36
	TOK_INCLUDE  shift 3
	TOK_PROCEDURE  shift 37
	TOK_RULE  shift 38
	TOK_TYPE  shift 39
	TOK_END_SCHEMA  reduce 250

	function_header  goto 40
	rule_header  goto 41
	procedure_header  goto 42
	declaration  goto 43
	block_member  goto 44
	include_directive  goto 45
	rule_decl  goto 46
	entity_decl  goto 47
	function_decl  goto 48
	procedure_decl  goto 49
	type_decl  goto 50
	entity_header  goto 51


state 35
	entity_header : TOK_ENTITY . TOK_IDENTIFIER  (77)

	TOK_IDENTIFIER  shift 58
	.  error


state 36
	function_header : TOK_FUNCTION . $$3 TOK_IDENTIFIER $$4 formal_parameter_list $$5 TOK_COLON parameter_type semicolon  (133)
	$$3 : .  (130)

	.  reduce 130

	$$3  goto 59


state 37
	procedure_header : TOK_PROCEDURE . $$8 TOK_IDENTIFIER $$9 formal_parameter_list semicolon  (219)
	$$8 : .  (217)

	.  reduce 217

	$$8  goto 60


state 38
	rule_header : TOK_RULE . $$11 TOK_IDENTIFIER TOK_FOR TOK_LEFT_PAREN $$12 rule_formal_parameter_list TOK_RIGHT_PAREN semicolon  (248)
	$$11 : .  (246)

	.  reduce 246

	$$11  goto 61


state 39
	type_decl : TOK_TYPE . type_item where_rule_OPT $$15 TOK_END_TYPE semicolon  (298)

	TOK_IDENTIFIER  shift 62
	.  error

	type_item  goto 63


state 40
	function_decl : function_header . action_body TOK_END_FUNCTION semicolon  (129)
	action_body_item_rep : .  (5)

	TOK_CONSTANT  shift 17
	TOK_ENTITY  shift 35
	TOK_FUNCTION  shift 36
	TOK_LOCAL  shift 64
	TOK_PROCEDURE  shift 37
	TOK_TYPE  shift 39
	TOK_ALIAS  reduce 5
	TOK_BEGIN  reduce 5
	TOK_CASE  reduce 5
	TOK_END_FUNCTION  reduce 5
	TOK_ESCAPE  reduce 5
	TOK_IF  reduce 5
	TOK_QUESTION_MARK  reduce 5
	TOK_REPEAT  reduce 5
	TOK_RETURN  reduce 5
	TOK_SKIP  reduce 5
	TOK_BUILTIN_PROCEDURE  reduce 5
	TOK_IDENTIFIER  reduce 5
	TOK_SELF  reduce 5
	TOK_SEMICOLON  reduce 5

	function_header  goto 40
	procedure_header  goto 42
	action_body  goto 65
	action_body_item_rep  goto 66
	action_body_item  goto 67
	declaration  goto 68
	constant_decl  goto 69
	local_decl  goto 70
	entity_decl  goto 47
	function_decl  goto 48
	procedure_decl  goto 49
	type_decl  goto 50
	entity_header  goto 51


state 41
	rule_decl : rule_header . action_body where_rule TOK_END_RULE semicolon  (242)
	action_body_item_rep : .  (5)

	TOK_CONSTANT  shift 17
	TOK_ENTITY  shift 35
	TOK_FUNCTION  shift 36
	TOK_LOCAL  shift 64
	TOK_PROCEDURE  shift 37
	TOK_TYPE  shift 39
	TOK_ALIAS  reduce 5
	TOK_BEGIN  reduce 5
	TOK_CASE  reduce 5
	TOK_ESCAPE  reduce 5
	TOK_IF  reduce 5
	TOK_QUESTION_MARK  reduce 5
	TOK_REPEAT  reduce 5
	TOK_RETURN  reduce 5
	TOK_SKIP  reduce 5
	TOK_WHERE  reduce 5
	TOK_BUILTIN_PROCEDURE  reduce 5
	TOK_IDENTIFIER  reduce 5
	TOK_SELF  reduce 5
	TOK_SEMICOLON  reduce 5

	function_header  goto 40
	procedure_header  goto 42
	action_body  goto 71
	action_body_item_rep  goto 66
	action_body_item  goto 67
	declaration  goto 68
	constant_decl  goto 69
	local_decl  goto 70
	entity_decl  goto 47
	function_decl  goto 48
	procedure_decl  goto 49
	type_decl  goto 50
	entity_header  goto 51


state 42
	procedure_decl : procedure_header . action_body TOK_END_PROCEDURE semicolon  (216)
	action_body_item_rep : .  (5)

	TOK_CONSTANT  shift 17
	TOK_ENTITY  shift 35
	TOK_FUNCTION  shift 36
	TOK_LOCAL  shift 64
	TOK_PROCEDURE  shift 37
	TOK_TYPE  shift 39
	TOK_ALIAS  reduce 5
	TOK_BEGIN  reduce 5
	TOK_CASE  reduce 5
	TOK_END_PROCEDURE  reduce 5
	TOK_ESCAPE  reduce 5
	TOK_IF  reduce 5
	TOK_QUESTION_MARK  reduce 5
	TOK_REPEAT  reduce 5
	TOK_RETURN  reduce 5
	TOK_SKIP  reduce 5
	TOK_BUILTIN_PROCEDURE  reduce 5
	TOK_IDENTIFIER  reduce 5
	TOK_SELF  reduce 5
	TOK_SEMICOLON  reduce 5

	function_header  goto 40
	procedure_header  goto 42
	action_body  goto 72
	action_body_item_rep  goto 66
	action_body_item  goto 67
	declaration  goto 68
	constant_decl  goto 69
	local_decl  goto 70
	entity_decl  goto 47
	function_decl  goto 48
	procedure_decl  goto 49
	type_decl  goto 50
	entity_header  goto 51


state 43
	block_member : declaration .  (44)

	.  reduce 44


state 44
	block_list : block_list block_member .  (43)

	.  reduce 43


state 45
	block_member : include_directive .  (45)

	.  reduce 45


state 46
	block_member : rule_decl .  (46)

	.  reduce 46


state 47
	declaration : entity_decl .  (66)

	.  reduce 66


state 48
	declaration : function_decl .  (67)

	.  reduce 67


state 49
	declaration : procedure_decl .  (68)

	.  reduce 68


state 50
	declaration : type_decl .  (69)

	.  reduce 69


state 51
	entity_decl : entity_header . subsuper_decl semicolon entity_body TOK_END_ENTITY semicolon  (76)
	subsuper_decl : .  (272)

	TOK_ABSTRACT  shift 73
	TOK_SUBTYPE  shift 74
	TOK_SUPERTYPE  shift 75
	TOK_SEMICOLON  reduce 272

	subtype_decl  goto 76
	subsuper_decl  goto 77
	supertype_decl  goto 78


state 52
	schema_decl : schema_header schema_body TOK_END_SCHEMA semicolon .  (251)

	.  reduce 251


state 53
	constant_body : identifier TOK_COLON . attribute_type TOK_ASSIGNMENT expression semicolon  (62)

	TOK_ARRAY  shift 79
	TOK_BAG  shift 80
	TOK_BINARY  shift 81
	TOK_BOOLEAN  shift 82
	TOK_INTEGER  shift 83
	TOK_LIST  shift 84
	TOK_LOGICAL  shift 85
	TOK_NUMBER  shift 86
	TOK_REAL  shift 87
	TOK_SET  shift 88
	TOK_STRING  shift 89
	TOK_IDENTIFIER  shift 90
	.  error

	attribute_type  goto 91
	defined_type  goto 92
	basic_type  goto 93
	aggregation_type  goto 94
	array_type  goto 95
	bag_type  goto 96
	list_type  goto 97
	set_type  goto 98


state 54
	constant_body_list : constant_body constant_body_list .  (64)

	.  reduce 64

